Import patches-unapplied version 5-20150404-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 73d0f5f86efe960584e693f2752bedbf138fb270

New changelog entries:
  * Update to SVN 20150404.
  * Don't explicitly configure --with-gxx-include-dir and an absolute path,
    so the toolchain remains relocatible. Instead, canonicalize the include
    path names at runtime.
  * Don't link libgnatprj using --no-allow-shlib-undefined on older releases.
  * Don't build libmpx on older releases.
  * Remove the work around to build libgccjit on arm64.
  * Fix the libgccjit build using the just built compiler.
  * Don't break other gcc, gcj, gnat -base packages for backports, only
    needed for dist-upgrades.
  * Don't add -gtoggle to STAGE3_CFLAGS (disabling the bootstrap comparison).
    Instead, ignore the one differing file (gcc/ada/a-except.o) for now.
    See #781457, PR ada/65618.
  * Update libasan, libtsan, libgfortran and libstdc++ symbols files.
  * Add symbols files for libmpx, libgccjit and libcc1.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -480,6 +480,8 @@ GO_BUILD_DEP := netbase,
 gnat_build_dep := gnat-5 [$(ada_no_archs)] | gnat-4.9 [$(ada_no_archs)]
 ifneq (,$(filter $(distrelease), wheezy precise trusty))
   gnat_build_dep := gnat-5 [$(ada_no_archs)] | gnat [$(ada_no_archs)]
+else ifneq (,$(filter $(distrelease), squeeze lucid))
+  gnat_build_dep :=
 endif
 
 ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
@@ -538,6 +540,13 @@ endif
   JAVA_BUILD_INDEP :=
   GNAT_BUILD_DEP :=
 endif # cross compiler
+
+BASE_BREAKS := gcc-4.4-base (<< 4.4.7), gcc-4.7-base (<< 4.7.3), gcj-4.4-base (<< 4.4.6-9~), gnat-4.4-base (<< 4.4.6-3~), gcj-4.6-base (<< 4.6.1-4~), gnat-4.6 (<< 4.6.1-5~)
+# these would need proper updates, and are only needed for upgrades
+ifneq (,$(filter $(distrelease),squeeze wheezy lucid precise trusty))
+  BASE_BREAKS :=
+endif
+
 
 # The numeric part of the gcc version number (x.yy.zz)
 NEXT_GCC_VERSION := $(shell echo $(GCC_VERSION) | \
@@ -1017,6 +1026,7 @@ substvars-file:
 		echo 'dep:libcxxbiarchdbg=$(libstdc++biarchdbg)'; \
 		echo 'dep:libgnat=$(LIBGNAT_DEP)'; \
 		echo 'dep:ecj=$(ECJ_DEP)'; \
+		echo 'base:Breaks=$(BASE_BREAKS)'; \
 	) > debian/substvars.local.tmp
 ifneq (,$(filter $(DEB_TARGET_ARCH), $(multilib_archs)))
 	( \
