Import patches-unapplied version 5.1.1-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 10c390430eef8c7dd7f0a7dae6504597d5d94a5f

New changelog entries:
  * GCC 5.1.0 release.
  * Update to SVN 20150424 (r222416, 5.1.1) from the gcc-5-branch.
  * Update NEWS files.
  * Apply the ada-bootstrap-compare patch for snapshot builds as well.
  * Update libasan, libgomp and libstdc++ symbols files.
  * Don't ignore errors in dh_makeshlibs and dh_shlibdeps anymore, symbols
    files should be uptodate now.
  * Split out the sjlj build related things from the ada-acats patch into
    a new ada-acats-sjlj patch.
  * Don't build libx32phobos-5-dev when not building x32 multilibs.
  * Fix standard C++ include directory for cross builds. Closes: #783241.
  * Ignore bootstrap comparison failure on ia64. Filed upstream as
    PR middle-end/65874.
  * gccgo: Add (don't yet apply) a patch to implement escape analysis (taken
    from the trunk). Turned off by default, enable with -fgo-optimize-alloc.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -204,8 +204,11 @@ ifeq ($(trunk_build),yes)
   BINUTILSBDV = 2.23
 else
   BINUTILSBDV = 2.22
-  ifneq (,$(filter $(distrelease),jessie sid vivid))
+  ifneq (,$(filter $(distrelease),vivid))
     BINUTILSBDV = 2.25-3~
+  endif
+  ifneq (,$(filter $(distrelease),jessie sid vivid))
+    BINUTILSBDV = 2.25-7~
   endif
 endif
 ifeq ($(DEB_CROSS),yes)
@@ -374,6 +377,9 @@ else
 endif
 
 ISL_BUILD_DEP = libisl-dev,
+ifneq (,$(filter $(distrelease),jessie sid experimental))
+  ISL_BUILD_DEP = libisl-dev (>= 0.14),
+endif
 
 ifneq (,$(filter $(distrelease),lenny etch squeeze wheezy dapper hardy jaunty karmic lucid maverick natty oneiric precise quantal raring))
   MPC_BUILD_DEP = libmpc-dev,
@@ -802,6 +808,7 @@ ifeq ($(with_d),yes)
   languages += d
   ifeq ($(with_libphobos),yes)
     addons += libphobos
+    addons += $(if $(findstring amd64,$(biarchx32archs)),libx32phobos)
   endif
 endif
 ifeq ($(with_go),yes)
