Import patches-unapplied version 5.1.1-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 6915944fb9890f1c7369a657c185954b6f17dd09

New changelog entries:
  * Update to SVN 20150428 (r222550, 5.1.1) from the gcc-5-branch.
  * Fix the gnat build dependency.
  * Don't build go and gofmt for cross compilers.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -483,8 +483,9 @@ endif
 GO_BUILD_DEP := netbase,
 
 # try to build with itself, or with the last version
-gnat_build_dep := gnat-5 [$(ada_no_archs)] | gnat-4.9 [$(ada_no_archs)]
-ifneq (,$(filter $(distrelease), wheezy precise trusty))
+ifneq (,$(filter $(distrelease), jessie sid))
+  gnat_build_dep := gnat-4.9 [$(ada_no_archs)]
+else ifneq (,$(filter $(distrelease), wheezy precise trusty))
   gnat_build_dep := gnat-5 [$(ada_no_archs)] | gnat [$(ada_no_archs)]
 else ifneq (,$(filter $(distrelease), squeeze lucid))
   gnat_build_dep :=
