Import patches-unapplied version 5.1.1-5 to debian/sid
Imported using git-ubuntu import.

Changelog parent: bebfba4867cba659a784d0142f618c082159ecb5

New changelog entries:
  * Update to SVN 20150507 (r222873, 5.1.1) from the gcc-5-branch.
  * Fix 32bit libstdc++ symbols files for kfreebsd-amd64.
  * libx32phobos-dev: Don't depend on libx32z-dev, when not available.
  * Fix gotools configury.
  * Configure with 
      --disable-libstdcxx-dual-abi --with-default-libstdcxx-abi=c++98
    While libstdc++ provides a dual ABI to support both the c++98 and c++11
    ABI, there is no committment on compatibility of the old experimental
    c++11 ABI from GCC 4.9 and the stable c++11 ABI in GCC 5.
    Closes: #784655.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -1101,6 +1101,10 @@ ifeq ($(with_qmath),yes)
 	echo 'dep:libqmath=libquadmath$(QUADMATH_SONAME)$(LS)$(AQ) (>= $${gcc:Version})' \
 		>> debian/substvars.local.tmp
 endif
+ifeq ($(distribution),Debian)
+	echo 'dep:libx32z=$(if $(filter $(distribution), Debian),,libx32z1-dev)' \
+		>> debian/substvars.local.tmp
+endif
 ifeq ($(multilib),yes)
 	echo 'dep:libgfortranbiarchdev=$(libgfortranbiarchdev)' \
 		>> debian/substvars.local.tmp
@@ -1196,8 +1200,13 @@ ifeq ($(with_libphobos),yes)
   endif
 endif
 ifeq ($(with_cc1),yes)
-	echo 'dep:libcc1=libcc1-$(CC1_SONAME) (>= $${gcc:Version})' \
+  ifneq (,$(findstring build-cross, $(build_type)))
+	echo 'dep:libcc1=libcc1-$(CC1_SONAME) (>= $(GCC_VERSION))' \
 		>> debian/substvars.local.tmp
+  else
+	echo 'dep:libcc1=libcc1-$(CC1_SONAME) (>= $${gcc:Version})'
+		>> debian/substvars.local.tmp
+  endif
 endif
 #ifneq (,$(findstring gtk, $(java_awt_peers)))
 #	echo 'pkg:gcjgtk=libgcj$(subst 0,,$(GCJ_SONAME))-awt-gtk (>= $(DEB_GCJ_VERSION))' \
