Import patches-unapplied version 5.1.1-6 to debian/sid
Imported using git-ubuntu import.

Changelog parent: fb7083d8e8b6023fb5d0193cc7a34a29707d2c05

New changelog entries:
  * Update to SVN 20150519 (r223346, 5.1.1) from the gcc-5-branch.
  * Don't build gdc-multilib on armel.
  * Remove old CFLAGS/LDFLAGS settings to build gdc.
  * Remove reference to .ico file in NEWS.html.
  * Fix gcc's dependency on libcc1-0 for native builds.
  * Fix stripping the rpath when cross-building cross compilers.
  * Remove work arounds to build 64bit multilibs on 32bit targets,
    now properly fixed upstream.
  * Partially apply patches to build a gnat cross compiler (submitted
    by YunQiang Su).
    - gnatmake: Call the versioned gnatbind and gnatlink commands.
      Closes: #782257.
    - Allow libgnatprj and libgnatvsn to cross build. Addresses: #783372.
    - New patch ada-gnattools-cross.diff (no documentation).
  * Backport patch for gccgo:
    - gccgo: If unary & does not escape, the var does not escape.
  * Apply the backported patches for the go escape analysis. Need to
    be enabled with -fgo-optimize-alloc (this option may go away again).
  * Re-enable running the tests.

--- a/debian/control
+++ b/debian/control
@@ -259,7 +259,8 @@ Package: gcc-5
 Architecture: any
 Section: devel
 Priority: optional
-Depends: cpp-5 (= ${gcc:Version}), gcc-5-base (= ${gcc:Version}),  ${dep:libcc1},
+Depends: cpp-5 (= ${gcc:Version}), gcc-5-base (= ${gcc:Version}),
+    ${dep:libcc1}, 
   binutils (>= ${binutils:Version}), 
   ${dep:libgccdev}, ${shlibs:Depends}, ${misc:Depends}
 Recommends: ${dep:libcdev}
