--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -217,7 +217,7 @@ ifeq ($(DEB_CROSS),yes)
 			| awk '/^ii/{print $$3;exit}' | sed 's/-.*//')
 else
   BINUTILS_BUILD_DEP = binutils (>= $(BINUTILSBDV)) | binutils-multiarch (>= $(BINUTILSBDV))
-  ifeq ($(REVERSE_CROSS),yes)
+  ifneq (,$(findstring cross-build-,$(build_type)))
     BINUTILSV := $(shell dpkg -l binutils$(TS) \
 			| awk '/^ii/{print $$3;exit}' | sed 's/-.*//')
   else
@@ -505,7 +505,7 @@ else ifeq ($(PKGSOURCE),gnat-$(BASE_VERSION))
   # Special source package just for gnat. Fail early if gnat is not present,
   # rather than waste CPU cycles and fail later.
   # Bootstrap step needs a gnatgcc symbolic link.
-  GNAT_BUILD_DEP := gnat (>= 4.1) | gnat-4.9 | gnat-4.6 (>= 4.6.4-2),
+  GNAT_BUILD_DEP := $(gnat_build_dep),
   GNAT_BUILD_DEP += $(SOURCE_BUILD_DEP)
   JAVA_BUILD_DEP :=
   JAVA_BUILD_INDEP :=
@@ -534,7 +534,7 @@ endif
 else
 # build cross compiler
   CROSS_BUILD_DEP := libc6-dev$(cross_lib_arch),
-ifeq ($(REVERSE_CROSS),yes)
+ifneq (,$(findstring cross-build-,$(build_type)))
   CROSS_BUILD_DEP += zlib1g-dev$(cross_lib_arch), libmpfr-dev$(cross_lib_arch),
 endif
   SOURCE_BUILD_DEP :=
@@ -1204,7 +1204,7 @@ ifeq ($(with_cc1),yes)
 	echo 'dep:libcc1=libcc1-$(CC1_SONAME) (>= $(GCC_VERSION))' \
 		>> debian/substvars.local.tmp
   else
-	echo 'dep:libcc1=libcc1-$(CC1_SONAME) (>= $${gcc:Version})'
+	echo 'dep:libcc1=libcc1-$(CC1_SONAME) (>= $${gcc:Version})' \
 		>> debian/substvars.local.tmp
   endif
 endif
