Import patches-unapplied version 5.1.1-7 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 9a5bf5a456f9f5616ad147b86629d0b45dcf90b0

New changelog entries:
  * Update to SVN 20150522 (r223579, 5.1.1) from the gcc-5-branch.
  * Add description for the ada-gnattools-cross patch (YunQiang Su).
  * Provide a rtlibs stage to build a subset of target library packages.
  * Make symbols file symlinking for cross builds more robust.
  * Prefer gnatgcc-5 over gnatgcc when building native packages.
  * Various fixes to build a gnat cross compiler:
    - Fix dependencies of packages.
    - Fix building libgnatprj and libgnatvsn (still needed to figure
      out if these are target or host libraries).
  * Fix building cross compilers with dpkg 1.18.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -596,7 +596,7 @@ GNAT_VERSION := $(BASE_VERSION)
 
 LIBGNAT_DEP :=
 ifeq ($(with_libgnat),yes)
-  LIBGNAT_DEP := libgnat-$(GNAT_VERSION) (= $(DEB_VERSION))
+  LIBGNAT_DEP := libgnat-$(GNAT_VERSION)$(LS)$(AQ) (>= $${gcc:Version})
 endif
 
 pkg_ver := -$(BASE_VERSION)
@@ -649,6 +649,9 @@ ifeq ($(DEB_CROSS),yes)
 	-DTARGET=$(DEB_TARGET_ARCH) \
 	-DLIBUNWIND_BUILD_DEP="$(LIBUNWIND_BUILD_DEP)" \
 	-DLIBATOMIC_OPS_BUILD_DEP="$(LIBATOMIC_OPS_BUILD_DEP)"
+  ifeq ($(DEB_STAGE),rtlibs)
+    ctrl_flags += -DCROSS_ARCH=$(DEB_TARGET_ARCH)
+  endif
 else
   # add '-DPRI=optional' to ctrl_flags if this is not the default compiler
   # ctrl_flags += \
@@ -668,7 +671,7 @@ endif
 control: control-file readme-bugs-file parameters-file symbols-files copyright-file substvars-file versioned-files check-versions
 
 # stage1 and stage2 compilers are only C
-ifdef DEB_STAGE
+ifneq (,$(filter $(DEB_STAGE),stage1 stage2))
   languages = c
   addons = cdev plugindev
   ifeq ($(multilib),yes)
@@ -690,14 +693,33 @@ ifdef DEB_STAGE
   endif
 else
 languages = c c++ fortran objc objpp
+ifeq ($(DEB_STAGE),rtlibs)
+  ifeq (,$(filter libgfortran, $(with_rtlibs)))
+    languages := $(filter-out fortran, $(languages))
+  endif
+  ifeq (,$(filter libobjc, $(with_rtlibs)))
+    languages := $(filter-out objc objpp, $(languages))
+  endif
+endif
 ifeq ($(with_gccbase),yes)
     addons += gccbase
 endif
 ifeq ($(with_gccxbase),yes)
     addons += gccxbase
 endif
-addons += cdev c++dev fdev objcdev source objppdev multilib
-addons += plugindev
+ifneq ($(DEB_STAGE),rtlibs)
+  addons += cdev c++dev source multilib
+  ifneq (,$(filter fortran, $(languages)))
+      addons += fdev
+  endif
+  ifneq (,$(filter objc, $(languages)))
+      addons += objcdev
+  endif
+  ifneq (,$(filter objpp, $(languages)))
+      addons += objppdev
+  endif
+  addons += plugindev
+endif
 addons += $(if $(findstring armel,$(biarchhfarchs)),armml)
 addons += $(if $(findstring armhf,$(biarchsfarchs)),armml)
 addons += $(if $(findstring amd64,$(biarchx32archs)),x32dev)
@@ -819,25 +841,27 @@ ifeq ($(with_go),yes)
     addons += $(if $(findstring amd64,$(biarchx32archs)),libx32ggo)
   endif
 endif
-
+ifeq ($(with_ada),yes)
   languages += ada
-  addons += libgnat libs source # libgmath libnof lib64gnat ssp
+  addons += libgnat libs # libgmath libnof lib64gnat ssp
   ifeq ($(with_gnatsjlj),yes)
     addons += adasjlj
   endif
-
+endif
+ifeq ($(with_java),yes)
   languages += java
   addons += gcj
   ifneq ($(DEB_CROSS),yes)
     addons += libgcj libgcjdev gcjdoc gcjsrc
   endif
+endif
 
   ifneq ($(DEB_CROSS),yes)
   ifneq (,$(neon_archs))
     addons += libneongcc libneongomp libneonitm libneonobjc libneongfortran libneoncxx
   endif
   ifeq ($(with_fixincl),yes)
-    addons += fixincl
+    addons += $(if $(DEB_STAGE),,fixincl)
   endif
   ifeq ($(with_libgcj_doc),yes)
     addons += gcjdoc
@@ -1295,20 +1319,28 @@ parameters-file:
 	  mv debian/rules.parameters.tmp debian/rules.parameters; \
 	  touch $(control_stamp)
 
-symbols-files:
+symbols-files: control-file
 ifeq ($(DEB_CROSS),yes)
-	for f in debian/*.symbols; do \
-	  [ -f "$$f" ] || continue; \
-	  [ -L "$$f" ] && continue; \
-	  b=$$(basename $$f .symbols); \
-	  ln -sf $$f debian/$$b$(LS).symbols; \
+  ifneq ($(DEB_STAGE),rtlibs)
+	test -n "$(LS)"
+	set -e; \
+	for p in $$(dh_listpackages -i | grep '^lib'); do \
+	  p=$${p%$(LS)}; \
+	  if [ -f debian/$$p.symbols.$(DEB_TARGET_ARCH) ]; then \
+	    f=debian/$$p.symbols.$(DEB_TARGET_ARCH); \
+	  elif [ -f debian/$$p.symbols ]; then \
+	    f=debian/$$p.symbols; \
+	  else \
+	    continue; \
+	  fi; \
+	  link=debian/$$p$(LS).symbols; \
+	  if [ -L $$link ]; then \
+	    echo >&2 "removing left over symbols file link: $$link"; \
+	    rm -f $$link; \
+	  fi; \
+	  ln -s $$f $$link; \
 	done
-	for f in debian/*.symbols.$(DEB_TARGET_ARCH); do \
-	  [ -f "$$f" ] || continue; \
-	  [ -L "$$f" ] && continue; \
-	  b=$$(basename $$f .symbols.$(DEB_TARGET_ARCH)); \
-	  ln -sf $$f debian/$$b$(LS).symbols; \
-	done
+  endif
 endif
 
 versioned-files:
