--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -31,6 +31,7 @@ _soname_map = gcc=$(GCC_SONAME) stdc++=$(CXX_SONAME) gomp=$(GOMP_SONAME) \
 	vtv=$(VTV_SONAME) cilkrts=$(CILKRTS_SONAME) mpx=$(MPX_SONAME)
 _soname = $(patsubst $(1)=%,%,$(filter $(1)=%,$(_soname_map)))
 
+rel_on_dev := $(if $(filter libgcc-$(BASE_VERSION)-dev$(LS), $(shell dh_listpackages -i)),>=,=)
 # $(call _lib_name,<name>,<biarch>,<ext>)
 _lib_name = $(subst $(SPACE),, \
   lib$(2)$(1) \
@@ -38,7 +39,7 @@ _lib_name = $(subst $(SPACE),, \
   $(if $(or $(filter $(3),dev),$(and $(filter $(3),dbg),$(filter $(1),stdc++))),-$(BASE_VERSION)) \
   $(if $(3),-$(3))$(LS)$(AQ))
 # $(call _lib_vers,<ext>,<vers>) 
-_lib_vers = ($(if $(filter $(1),dev),=,>=) $(2))
+_lib_vers = ($(if $(filter $(1),dev),$(rel_on_dev),>=) $(2))
 
 # Helper to generate biarch/triarch dependencies.
 # For example, $(eval $(call gen_multilib_deps,gomp)) will create the
@@ -99,7 +100,7 @@ ifeq ($(with_shared_libgcc),yes)
   LIBGCC_DEP := libgcc$(GCC_SONAME)$(LS)$(AQ) (>= $(DEB_LIBGCC_VERSION))
   $(eval $(call gen_multilib_deps,gcc,,$(DEB_LIBGCC_VERSION)))
 endif
-LIBGCC_DEV_DEP := libgcc-$(BASE_VERSION)-dev$(LS)$(AQ) (= $(DEB_VERSION))
+LIBGCC_DEV_DEP := libgcc-$(BASE_VERSION)-dev$(LS)$(AQ) ($(rel_on_dev) $(DEB_VERSION))
 $(foreach x,stdc++ gomp ssp gfortran itm objc atomic asan lsan mpx ubsan quadmath go vtv cilkrts, \
 	$(eval $(call gen_multilib_deps,$(x),,$$$${gcc:Version})))
 $(foreach x,gcc stdc++ gfortran objc go phobos, \
@@ -207,7 +208,7 @@ else
   ifneq (,$(filter $(distrelease),vivid))
     BINUTILSBDV = 2.25-3~
   endif
-  ifneq (,$(filter $(distrelease),jessie sid vivid))
+  ifneq (,$(filter $(distrelease),jessie sid))
     BINUTILSBDV = 2.25-7~
   endif
 endif
@@ -673,7 +674,7 @@ control: control-file readme-bugs-file parameters-file symbols-files copyright-f
 # stage1 and stage2 compilers are only C
 ifneq (,$(filter $(DEB_STAGE),stage1 stage2))
   languages = c
-  addons = cdev plugindev
+  addons = gccbase cdev plugindev
   ifeq ($(multilib),yes)
     addons += multilib
   endif
@@ -681,7 +682,7 @@ ifneq (,$(filter $(DEB_STAGE),stage1 stage2))
   addons += $(if $(findstring armhf,$(biarchsfarchs)),armml)
   addons += $(if $(findstring amd64,$(biarchx32archs)),x32dev)
   ifeq ($(DEB_STAGE),stage2)
-    addons += libgcc gccxbase
+    addons += libgcc
     ifeq ($(multilib),yes)
       addons += lib32gcc lib64gcc libn32gcc
       addons += $(if $(findstring amd64,$(biarchx32archs)),libx32gcc)
@@ -703,9 +704,6 @@ ifeq ($(DEB_STAGE),rtlibs)
 endif
 ifeq ($(with_gccbase),yes)
     addons += gccbase
-endif
-ifeq ($(with_gccxbase),yes)
-    addons += gccxbase
 endif
 ifneq ($(DEB_STAGE),rtlibs)
   addons += cdev c++dev source multilib
@@ -1032,7 +1030,7 @@ copyright-file:
 		-e "s/@SVN_BRANCH@/$$SVN_BRANCH/g"	\
 		> debian/copyright
 
-substvars-file:
+substvars-file: control-file
 	rm -f debian/substvars.local.tmp
 	( \
 		echo 'libgcc:Version=$(DEB_LIBGCC_VERSION)'; \
