Import patches-unapplied version 5.1.1-10 to debian/sid
Imported using git-ubuntu import.

Changelog parent: ecf82eb73f2a5aa6c9a0c05311bfdcd730b3e214

New changelog entries:
  * Update to SVN 20150613 (r224454, 5.1.1) from the gcc-5-branch.
  * Make removal of byte-compiled libstdc++ pretty printer files more
    robust. Closes: #787630.
  * Fix mips 32bit (o32) multilib builds (YunQiang Su).
  * Build target libraries with -Wl,-z,relro.
  * Build libstdc++6 when building the common libraries.
  * Fix a bunch of lintian warnings.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -438,10 +438,6 @@ ifneq (,$(java_awt_peers))
   #JAVA_BUILD_DEP += libgconf2-dev$(bd_java_archs),
   # gstreamer peer
   #JAVA_BUILD_DEP += libgstreamer-plugins-base0.10-dev$(bd_java_archs),
-  # FIXME ... necessary only when built from separate source?
-  #ifneq ($(single_package),yes)
-  #  JAVA_BUILD_DEP += g++-5 [armel armhf],
-  #endif
 endif
 ifneq ($(with_standalone_gcj),yes)
   ifeq ($(PKGSOURCE),gcj-$(BASE_VERSION))
@@ -484,12 +480,14 @@ endif
 GO_BUILD_DEP := netbase,
 
 # try to build with itself, or with the last version
-ifneq (,$(filter $(distrelease), jessie sid))
-  gnat_build_dep := gnat-4.9 [$(ada_no_archs)]
-else ifneq (,$(filter $(distrelease), wheezy precise trusty))
-  gnat_build_dep := gnat-5 [$(ada_no_archs)] | gnat [$(ada_no_archs)]
+ifneq (,$(filter $(distrelease), jessie stretch sid))
+  gnat_build_dep := gnat-4.9 [$(ada_no_archs)], g++-4.9
+else ifneq (,$(filter $(distrelease), wheezy precise trusty wily))
+  gnat_build_dep := gnat-5 [$(ada_no_archs)], g++-5
 else ifneq (,$(filter $(distrelease), squeeze lucid))
   gnat_build_dep :=
+else
+  gnat_build_dep := gnat [$(ada_no_archs)]
 endif
 
 ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
@@ -675,6 +673,9 @@ control: control-file readme-bugs-file parameters-file symbols-files copyright-f
 ifneq (,$(filter $(DEB_STAGE),stage1 stage2))
   languages = c
   addons = gccbase cdev plugindev
+  ifeq ($(with_gcclbase),yes)
+    addons += gcclbase
+  endif
   ifeq ($(multilib),yes)
     addons += multilib
   endif
@@ -704,6 +705,9 @@ ifeq ($(DEB_STAGE),rtlibs)
 endif
 ifeq ($(with_gccbase),yes)
     addons += gccbase
+endif
+ifeq ($(with_gcclbase),yes)
+  addons += gcclbase
 endif
 ifneq ($(DEB_STAGE),rtlibs)
   addons += cdev c++dev source multilib
