--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -559,8 +559,8 @@ NEXT_GCC_VERSION := $(shell echo $(GCC_VERSION) | \
 		awk -F. '{OFS="."; if (NF==2) $$3=1; else $$NF += 1; print}')
 # first version with a new path component in gcc_lib_dir (i.e. GCC_VERSION
 # or TARGET_ALIAS changes), or last version available for all architectures
-DEB_GCC_SOFT_VERSION := 5
-DEB_GCJ_SOFT_VERSION := 5
+DEB_GCC_SOFT_VERSION := 5.1.1-12
+DEB_GCJ_SOFT_VERSION := 5.1.1-12
 
 ifeq ($(with_d),yes)
   GDC_VERSION := $(BASE_VERSION)
