--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -1008,6 +1008,7 @@ control-file:
 	  -Dbiarchhf_archs="$(strip $(subst /, ,$(biarchhfarchs)))" \
 	  -Dbiarchsf_archs="$(strip $(subst /, ,$(biarchsfarchs)))" \
 	  -Dadd_built_using=$(add_built_using) \
+	  -DPR66145BREAKS="$(if $(findstring build-native,$(build_type)),$(if $(filter new,$(libstdcxx_abi)),$$(tr '\n' ' ' < debian/libstdc++-breaks.$(derivative))))" \
 		debian/control.m4 > debian/control.tmp2
 	uniq debian/control.tmp2 | sed '/^Build/s/ *, */, /g;/^  /s/ *, */, /g' \
 		$(if $(filter yes, $(with_base_only)), | awk '/^$$/ {if (p) exit; else p=1; } {print}') \
